--- a/assets/styling/typography.sass
+++ b/assets/styling/typography.sass
@@ -9,14 +9,10 @@ html, body
 
 h1, h2, h3, p
   max-width: $font-maxwidth
-  overflow-wrap: break-word
-  word-wrap: break-word
-  word-break: break-word
-  /* Adds a hyphen where the word breaks, if supported (No Blink) */
-  -ms-hyphens: auto
-  -moz-hyphens: auto
-  -webkit-hyphens: auto
-  hyphens: auto
+  overflow-wrap: normal
+  word-wrap: normal
+  word-break: normal
+  hyphens: normal
 
 h1, h2, h3, p, a, a:link, a:visited, a:hover, a:active, span, input
   font-family: "Graphik", Helvetica, Arial, sans-serif
